Closed
Bug 1909478
Opened 4 months ago
Closed 4 months ago
Support GetTid function on WASI builds
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
RESOLVED
FIXED
130 Branch
Tracking | Status | |
---|---|---|
firefox130 | --- | fixed |
People
(Reporter: me, Assigned: me)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:128.0) Gecko/20100101 Firefox/128.0
Steps to reproduce:
Attempt to build using wasi with intl/icu in debug mode
Actual results:
The builds fails with:
.mozbuild/sysroot-wasm32-wasi/include/signal.h:2:2: error: "wasm lacks signal support; to enable minimal signal emulation, compile with -D_WASI_EMULATED_SIGNAL and link with -lwasi-emulated-signal"
Expected results:
The build should succeed
Assignee | ||
Comment 1•4 months ago
|
||
Updated•4 months ago
|
Assignee: nobody → me
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•4 months ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::JavaScript: WebAssembly' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Component: Untriaged → JavaScript: WebAssembly
Product: Firefox → Core
Updated•4 months ago
|
Updated•4 months ago
|
Component: JavaScript: WebAssembly → JavaScript Engine
Summary: Support GetTid function on wasm → Support GetTid function on WASI builds
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6b4f29ede269
Support GetTid for wasm builds by always returning 1 for thread id. r=jandem
Comment 4•4 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 months ago
status-firefox130:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•