Bug 1909478 - Support GetTid for wasm builds by always returning 1 for thread id. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D217447