js/src/frontend/FrontendContext.cpp
@@ -204,6 +204,8 @@ bool FrontendContext::convertToRuntimeError(
 static size_t GetTid() {
 #  if defined(_WIN32)
   return size_t(GetCurrentThreadId());
+#  elif defined(__wasm__)
+  return 1;
 #  else
   return size_t(pthread_self());
 #  endif
